# helpdesk-mvp

./: .env.example  .gitignore  Makefile  README.md  migration_error.txt  package-lock.json  package.json
apps/api/: Dockerfile  README.md  pyproject.toml  test_output.txt  test_output_error.txt  test_output_error_2.txt  test_sla_failures.txt  test_sla_failures_2.txt  test_sla_output.txt  test_tickets_output.txt  test_tickets_output_2.txt  test_tickets_output_3.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 22a8bb2a34a2_create_workspaces_and_users.py  3e6e2f849030_add_sla_audit_reports_tables.py  4a7c8d9e0f1b_add_user_contact_fields.py  d6390cd33129_create_tickets_messages_notes_tags_.py
apps/api/app/: jobs.py  main.py  queue.py  scheduler.py  worker.py
apps/api/app/common/: pagination.py  responses.py
apps/api/app/core/: config.py  errors.py  logging.py  security.py
apps/api/app/db/: base.py
apps/api/app/modules/admin/: router.py
apps/api/app/modules/audit/: models.py
apps/api/app/modules/auth/: deps.py  repo.py  router.py  schemas.py  service.py
apps/api/app/modules/reports/: agents.py  models.py  repo.py  router.py  schemas.py  service.py
apps/api/app/modules/sla/: models.py  repo.py  router.py  schemas.py  service.py
apps/api/app/modules/tags/: models.py  repo.py  router.py  schemas.py
apps/api/app/modules/tickets/: models.py  repo.py  router.py  (+2 more)
apps/api/app/scripts/: seed_demo.py
apps/api/migrations/versions/: phase6_profiles.py
apps/api/tests/: conftest.py  test_auth.py  test_health.py  test_sla_jobs.py  test_tickets.py
(+65 files in other folders)
